<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobot_apps</name>
  <version>0.2.0</version>
  <description>Package for apps created with mobot</description>
  <author email="hudurah737@gmail.com">Hussien Alqupati</author>
  <maintainer email="hudurah737@gmail.com">Hussien Alqupati</maintainer>
  <maintainer email="hudurah737@gmail.com">Hussien Alqupati</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>mobot_gz_classic</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
