<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobot_slam</name>
  <version>0.2.0</version>
  <description>The mobot_slam package</description>

  <author email="hudurah737@gmail.com">Hussien Alqupati</author>
  <maintainer email="hudurah737@gmail.com">Hussien Alqupati</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
